--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>QR Code Studio - Style Your QR Code</title>
-    <meta name="description" content="Create beautiful, customizable QR codes with logos, colors, and styles. Perfect for business cards, marketing materials, and digital content." />
-    <meta name="author" content="Lovable" />
-    <meta name="keywords" content="QR code generator, custom QR codes, QR code with logo, styled QR codes" />
+    <title>UR9 QR-code generator</title>
+    <meta name="description" content="Create beautiful, customizable QR codes with logos, colors, and styles. Powered by UR9 Creative Tech. Perfect for business cards, marketing materials, and digital content." />
+    <meta name="author" content="UR9 Creative Tech" />
+    <meta name="keywords" content="QR code generator, custom QR codes, QR code with logo, styled QR codes, UR9" />
 
-    <meta property="og:title" content="QR Code Studio - Style Your QR Code" />
-    <meta property="og:description" content="Create beautiful, customizable QR codes with logos, colors, and styles. Perfect for business cards, marketing materials, and digital content." />
+    <meta property="og:title" content="UR9 QR-code generator" />
+    <meta property="og:description" content="Create beautiful, customizable QR codes with logos, colors, and styles. Powered by UR9 Creative Tech. Perfect for business cards, marketing materials, and digital content." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/ur9-logo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@ur9group" />
+    <meta name="twitter:image" content="/ur9-logo.png" />
   </head>
 
   <body>
